Update ChangeLog, re #495

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,328 @@
+06.04.2022 v 5.0
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0&state=all
+- .gitignore-Dateien fehlen [#2]
+- Videoeinbindung funktioniert nicht [#4]
+- Courseware: Übersetzung funktioniert nicht [#5]
+- Courseware: Fehler bei webp-Dateien? [#7]
+- Auflösen der Navigation unter Tools [#25]
+- Courseware: Fehler - Seiten werden doppelt eingefügt beim Verschieben [#26]
+- Call to a member function getFullName() on null in consultation/export/print.php [#31]
+- Homepageplugins (Sprechstunden) können nicht aktiviert werden [#37]
+- Arbeitsplatz/Dateiansicht: Übersichtsseite fehlen Ansichten [#40]
+- Tests im Jenkins CI sind kaputt [#42]
+- Courseware: Import funktioniert nicht [#49]
+- Courseware: Anlegen eines neuen Inhalts bietet keine eigenen Dateiordner an [#54]
+- Fehler beim öffnen des Veranstaltungskalenders als root/admin [#55]
+- Courseware: VideoBlock - Settings funktionieren nicht richtig [#65]
+- Migration 20210201_step_00349.php führt u.U. zu Duplicate Entry Fehler [#70]
+- Anderer Text zur Einstellung der Sichtbarkeit einer Veranstaltung [#74]
+- "Meine Einrichtungen" Iconfarben passen noch nicht [#78]
+- Tippfehler beheben [#83]
+- Icongrößen müssen in 5.0 gesetzt werden [#85]
+- Feintuning der Kacheln unter Mein Arbeitsplatz [#86]
+- Wiki: Inhaltsverzeichnis nicht per Tastaturnavigation erreichbar [#106]
+- Courseware: Verwaltungsseite stört Skiplink-Reihenfolge [#107]
+- Courseware (5.0): Neues Lernmaterial: „Vorschaubild hochladen“ nicht per Tastaturnavigation erreichbar [#108]
+- Tab Container enthält leere Elemente [#114]
+- Falscher Iconpfad auf der Startseite eines leeren Wikis [#116]
+- Unbekannte Courseware Block-Typen in der DB behandeln [#120]
+- README-Datei nicht mehr aktuell [#121]
+- Veranstaltung: Kurzinfo: Kaputtes HTML im Bereich Grunddaten [#127]
+- Fehlender Uni-Name bei Mail zur Passwortänderung [#134]
+- Fehlende Components für Plugins [#139]
+- Admin -> System -> Konfiguration: Sortierung fehlt [#144]
+- Verwendung von vue-gettext für die Übersetzung im JS-Code [#149]
+- Übersetzungen 5.0 [#150]
+- Mein Arbeitsplatz - Widgets [#151]
+- AudioBlock zeigt Aufnahme Option nicht an [#153]
+- Fehler beim Kopieren von Veranstaltugnen [#154]
+- Unerwartetes Verhalten beim Hinzufügen von Blöcken bei mehreren Abschnitten auf einer Seite in Courseware [#156]
+- Fehlende Ordner in data bei frischer Installation [#161]
+- Fehlende Dimensionen in Icon-SVGs [#163]
+- Courseware Import & Export von TextBlöcken fehlerhaft [#169]
+- Courseware Import bricht gelegentlich mit einem 409 ab [#170]
+- Modulverzeichnis: Invalid parameter number: number of bound variables does not match number of tokens [#181]
+- Veranstaltungskategorien: Inhaltselemente nicht wählbar [#183]
+- Courseware: rote Icons verschwinden nicht [#184]
+- Weiterentwicklung / Verbesserung Sprechstunden [#189]
+- Farbcodierung in Veranstaltungen und Planer [#191]
+- Autoloader funktioniert nicht für phpCAS [#206]
+- Aufruf der Teilnehmendenliste in Studiengruppen führt zu Exception [#207]
+- Issue: Call to undefined method SemClass::getSlotModule [#211]
+- Falsche Semesterzuordnung nach dem Update auf 5.0 [#212]
+- Raumanfragen: Geschlossene Raumanfragen können nicht wieder geöffnet werden [#216]
+- Courseware Übersicht [#229]
+- Löschen von Dozenten führt zu Fehler [#231]
+- XML-RPC Web-Services funktionieren nicht mehr [#232]
+- Deaktivierter OER-Campus über Schnellzugriff erreichbar [#233]
+- StudipCachedArray liefert falsche Daten [#237]
+- Blättern im Veranstaltungsverzeichnis: Semesterauswahl liefert falsche Veranstaltungen [#244]
+- Courseware Einstellungen werden nicht angezeigt [#245]
+- Courseware Kopieren aus Veranstaltung bietet nicht alle Veranstaltungen an [#246]
+- Courseware Migration falscher default Wert [#247]
+- Blättern im Veranstaltungsverzeichnis: ausgewähltes Semester springt beim Blättern zurück [#248]
+- Migration der Seminare-Semester-Tabelle ist fehlerhaft [#249]
+- Courseware: Inhalte mit "Sichtbar ab" in der Zukunft sind für Teilnehmer sichtbar [#253]
+- Mount Point '#tiled-courses-sidebar-switch .sidebar-widget-content .widget-list' not found in document [#254]
+- Courseware: Blöcke in Tabs einfügen funktioniert nicht mehr [#255]
+- Courseware Dateien einbinden wirft Fehler [#256]
+- Courseware Fehler bei Dateien die gelöscht worden sind [#257]
+- Embed Block wirft Fehler beim Import [#259]
+- Dateiwähler zeigt keine oder nicht alle Dateien aus dem Dateibereich [#260]
+- Courseware: LaTeX-Formeln in Textblöcken werden als Code angezeigt [#266]
+- Meine Veranstaltungen: Einige rote Icons werden nicht zurückgesetzt [#268]
+- Zeiten/Räume: Aktion „Regelmäßigen Termin hinzufügen“ funktioniert nicht bei unbegrenzten Veranstaltungen [#273]
+- Dropdown Menü in einem Opencast-Block in Courseware wird am unteren Bildschirmrand nicht vollständig angezeigt [#274]
+- Versionierung der von webpack generierten assets funktioniert nicht richtig [#275]
+- Beim Kopieren von Courseware-Inhalten sind Veranstaltungen mit identischem Titel nicht unterscheidbar [#277]
+- Liste der Veranstaltung in "Arbeitsplatz -> Courseware -> Meine Veranstaltungen" ist unvollständig [#278]
+- Interne Courseware-Links enthalten eine falsche URL, wenn sie in einem neuen Tab geöffnet werden [#279]
+- Courseware Contentbar Navigation fehlerhaft [#280]
+- Meine Veranstaltungen: Klick auf Zahnrad-Icon führt bei Studiengruppen zu Fehler [#282]
+- Der Inhaltsverzeichnis-Block in Courseware zeigt auch Seiten an, die noch nicht sichtbar sein sollten [#283]
+- In Courseware-Blöcke eingebundene Dateien aus versteckten Ordnern sind für Studierende nicht sichtbar [#285]
+- Fehlermeldung bei Aufruf der Terminvergabe [#288]
+- Die Courseware-Einstellungen sind für Root- und Admin-Accounts nicht sichtbar [#289]
+- In den Courseware-Einstellungen lässt sich die Kapitelabfolge nicht von "sequentiell" auf "frei" stellen [#290]
+- Im Dialog zum Kopieren von Themen aus Veranstaltungen zeigt das Suchfeld nur einen Fehler [#291]
+- Courseware: Blöcke in Tab- und Akkordeon-Abschnitten verschwinden, wenn die Reiter bearbeitet und die Änderungen gespeichert werden [#292]
+- Courseware: Paginiertes Laden statt festgelegtem Limit [#293]
+- Courseware Tab Container zu wenig Schutzraum für den Inhalt [#294]
+- DocumentBlock hat Icon-Fehler [#295]
+- Courseware: Document Block zeigt Fehlermeldung seit #293 [#296]
+- Raumanfrage auflösen: Doppelte Scrollbar bei vielen Raumvorschlägen [#297]
+- Blubber Screenshot auf der Mehr... Seite wird nicht angezeigt [#305]
+- Courseware Im- und Export fehlerhaft [#306]
+- Als Leser eingetragene Personen erhalten beim Aufruf der Veranstaltung weiße Seite [#308]
+- Courseware-Verwaltung: Breadcrumb verschwindet [#309]
+- Courseware: Umfangreiche Seitenbäume verlangsamen die Verwaltungsansicht [#311]
+- Courseware-Verwaltung: Beim Kopieren sind die gelben Pfeile neben dem Titel der Courseware nicht anklickbar [#312]
+- Löschen einer Seite zerstört Navigation [#315]
+- Courseware-Verwaltung: Seiten lassen sich nicht verschieben [#318]
+- Es gibt keine Rückmeldung, dass der Dialog "Seite bearbeiten" nicht aufgerufen werden kann, wenn eine andere Nutzer*in den Dialog geöffnet hat [#320]
+- Courseware lädt die Struktur immer doppelt [#322]
+- Beim Kopieren/Verschieben verschwindet der Hinweis, dass gearbeitet wird zu früh [#325]
+- Import hängt beim Embed-Block [#326]
+- Courseware: Fehlende `allowedPagingParameters` in Courseware-Routen mit Paginierung [#327]
+- Offene Gruppen in "Meine Veranstaltungen" und "Benachrichtigungen anpassen" verwenden `MY_COURSES_OPEN_GROUPS` unterschiedlich [#328]
+- In der Dropdown-Liste für Ordner aus der Dateiablage gibt es nur 30 Einträge [#329]
+- Courseware: Mehrfach verknüpfte Inhalte werden beim Kopieren mehrfach dupliziert [#336]
+- Container werden beim Löschen von Blöcken nicht aktualisiert [#342]
+- Import- und Kopier-Fehler mit AudioBlock [#344]
+- Vertretungen können nicht aus Veranstaltungen ausgetragen werden [#346]
+- Kopieren von Courseware-Inhalten gibt den Nutzenden zu wenig Feedback [#347]
+- Es gibt keine Möglichkeit mehr, einzelne Räume von der globalen Buchungssperre auszunehmen [#348]
+- Teilnehmergruppe: Info-Tooltip liefert beim Anklicken einen Fehler [#352]
+- Sortierung von Daten auf externen Seiten nicht möglich [#353]
+- Ein gesetztes Sichtbarkeits-Datum in Courseware wird nach dem Speichern nicht direkt angezeigt [#354]
+- Beim Kopieren und Verschieben von Courseware-Blöcken wird die Anzeige des Ziels nicht automatisch aktualisiert [#355]
+- Raum wird beim Löschen nicht aus Raumgruppe entfernt [#361]
+- Schlechte Performance beim Aufruf von CoursewareInstanceShow [#362]
+- Forum in Einrichtungen verschwunden [#363]
+- Reihenfolge der Tools in Einrichtungen falsch [#364]
+- Verwaltung von Veranstaltungen: Iconfarben passen noch nicht [#368]
+- Courseware: Leinwand unter iOS nicht nutzbar [#373]
+- Courseware: Audio-Block lässt sich in Safari in iOS nicht abspielen [#374]
+- Unbegrenzte Veranstaltungen haben Startzeitpunkt! [#377]
+- Einrichtungsnews werden nicht angezeigt [#380]
+- Reiter "Personal" in Einrichtungen verschwunden [#381]
+- Terminvergabe: Aufruf der Druckansicht führt zu Fehler [#385]
+- Terminvergabe: Änderung von Termingrund führt zu Fehlermeldung [#392]
+- Multi-Byte-String-Funktionen in SimpleORMap sind überflüssig [#398]
+- Veraltete Positionen und Formulierungen in Touren [#402]
+- Weiterleitung auf neue Wiki-Seiten funktioniert nicht mehr [#415]
+- Courseware: Fehler beim Laden des Block-Feedbacks [#416]
+- Fehlermeldung beim Löschen von Nutzern [#417]
+- Datenfelder: Bearbeitung der Werteliste bei radio und selectbox nicht mehr möglich [#420]
+- Wiki: SQL-Fehler "Illegal mix of collations" [#423]
+- Inkonsistente Darstellung bei den Aktivitäten [#424]
+- Abfrage der Veranstaltungen einer Person in CourseWare liest die Daten falsch aus. [#427]
+- OER-Campus Icon nicht konsistent [#435]
+- Courseware: Fehler, wenn eine Veranstaltung kein Heimatinstut hat [#443]
+- JSONAPI: `children`-Relation des `StructuralElement`-Schemas [#445]
+- Courseware: Seiten aus anderen Kursen werden nicht mehr zum Kopieren angeboten [#446]
+- Upload-Limits werden falsch ausgewertet [#448]
+- Voreingestellte Plugins sind nach dem Update auf 5.0 nicht mehr aktiviert [#449]
+- Veranstaltungskategorien: Änderungen an Inhaltselementen können nicht auf vorhandene Kurse angewendet werden [#450]
+- Courseware: Struktur wird nach Kopieren von Seiten nicht (sofort) aktualisiert [#454]
+- Courseware: Scrollbar im Dialog "Seite bearbeiten" nicht mit der Maus bedienbar [#457]
+- Abruf von `jsonapi.php/v1/courses/{id}` funktioniert nicht für Veranstaltungen, die Zusatzangaben erfordern [#458]
+- Dateien in Unterordnern von unsichtbaren Ordnern werden Studierenden in Courseware nicht angezeigt [#464]
+- Ein einzelner Block in einem Tab- oder Akkordeonabschnitt kann nicht verschoben werden [#466]
+- Scrollbarposition im Inhaltsverzeichnis beeinflusst die Scrollposition in "Elemente hinzufügen" und umgekehrt [#467]
+- Sichtbarkeit von Werkzeugen wirkt sich nur auf den Reiter aus [#468]
+- Fehlende Indizes [#470]
+- Dateibereich: Abstände in Ordner- und Lizenzauswahl falsch [#473]
+- SORM-API-Dokumentation ist veraltet bzw. nicht korrekt [#478]
+- Performanceproblem auf der CW-Übersichtseite [#488]
+- XSS: Textblock der Courseware ermöglicht Ausführung von JS-Code [#489]
+- Falsche Semestersortierung bei Arbeitsplatz > Courseware > Meine Veranstaltung [#490]
+- Wiki: Jede Seite hat als Titel "WikiWikiWeb" in der Kopfzeile [#493]
+- Release 5.0 [#495]
+- Courseware: Nach dem Anlegen des (ersten persönlichen) Lernmaterials lande ich nicht darin [#509]
+- falscher Funktionsaufruf in HiddenFolder [#517]
+- Letzte Inkonsistenzen ContentBar (Wiki/Courseware) [#526]
+- Dialog "Ausgewählte Nachrichten löschen" analog zu "Alle Nachrichten löschen" [#528]
+- Änderung der Semesterangaben werden nicht mehr protokolliert [#529]
+- Courseware: Auffindbarkeit des Inhaltsverzeichnisse und Vollbildmodus für (neue) Nutzende [#536]
+- Courseware: Darstellung der Kacheln im Default [#537]
+- Fragebögen: Darstellung der Diagramme via Chart.js erst nach einem Resize-Event korrekt [#538]
+- Courseware IHV ist über Tab erreichbar wenn es ausgeblendet ist [#542]
+- Fehlerhafte Textstrings in Vue-Komponenten [#545]
+- Kleinschreibung in CoursewareChartBlock [#546]
+- Fehlende i18n Markierungen [#547]
+- Courseware Modul-Beschreibung nicht aktuell [#548]
+- Accessibility-Probleme in der Courseware [#554]
+- Blubber: Call to a member function signalsAttention() on null [#557]
+- Courseware: "Inhalte werden geladen ..." durch Warte-Indikator ersetzen [#560]
+- Plugin-Verwaltung bietet noch Standard-Aktivierung in Veranstaltungen an [#568]
+- „Lizenzauswahl“ bei Dateien: Screenreader liest Bedingungen nicht vor [#571]
+- AudioBlock hat Probleme mit Chrome [#572]
+- Verwaiste Template von "Meine Veranstaltungen" [#573]
+- Courseware Dialog zum löschen von Blöcken zu klein [#574]
+- TypeError in courseware-confirm-block [#575]
+- Courseware Export Status fehlerhaft [#577]
+- TypeError: Argument 1 passed to StudipCachedArray::loadData() must be of the type string, null given [#580]
+- Courseware: Aktionsmenüs sind nicht tastaturbedienbar [#584]
+- Courseware: Inhaltsverzeichnis: Beim Öffnen per Tastatur wird der Fokus nicht in das Inhaltsverzeichnis verlegt [#586]
+- Courseware: kaputte Ansicht aus Teilnehmersicht, wenn die Einstiegsseite unsichtbar ist [#615]
+- Terminvergabe: Persönliche Nachrichten statt Systemnachrichten versenden [#616]
+- Stud.IP 5.0 Installationsassistent hat in Schritt 6 ein kaputtes Layout [#618]
+- Demodaten: Raumverwaltung: Raumgruppe: Berechtigungen für die gesamte Raumgruppe setzen: Berechtigung für „unbekannt“ wird angezeigt [#619]
+- Kopieren von Courseware-Inhalten aus Veranstaltungen: Kein Hinweis darauf, dass keine VA zum Kopieren da ist [#621]
+- Courseware Inhaltsverzeichnisblock Layout [#625]
+- Exception beim Löschen von Nutzern: Method ConsultationBlock::deletebyteacher_id not found [#629]
+- Rollenverwaltung: Anlegen und Löschen von Rollen verursacht Fatal Error [#630]
+- Courseware: Lange Ladezeiten auf der Inhalte-Seite  bei komplexer Struktur [#631]
+- TFA: Email Token zu kurz gültig (0,5 Minuten) [#634]
+- Courseware: Fehlermeldung in der Konsole beim wechseln der Seite [#641]
+- Courseware: Löschen von (komplexeren) Seiten [#643]
+- Dateien aus anderen Veranstaltungen hinzufügen funktioniert nicht [#645]
+- Courseware: Dateiordner Block erzeugt Fehlermeldung, wenn ein Ordner aus dem persönlichen Bereich gewählt wurde [#646]
+- OER Campus: Data too long for column 'content_type' [#653]
+- Link auf externe Hilfe verweist auf 5.1 statt 5.0 [#654]
+- Löschen von InstituteMember schlägt fehl [#656]
+- CoursewareDashboard: ActivityStreamShow kennt Filter nicht [#657]
+- OpenGraph-Informationen werden doppelt ausgelesen oder ausgegeben [#662]
+- OER Campus: Datei von Dateibereich aus einbinden [#668]
+- Teilnehmende: Separate Sichtbarkeitseinstellung für Gruppenseite wieder entfernen [#669]
+- Inhalte im OER-Campus nicht breit genug angezeigt [#670]
+- Sprechstundentermin reservieren: Exception, wenn kein Grund angegeben wurde [#673]
+- Vue-Integration von Blubber für Plugins [#676]
+- Courseware Aktionen enthalten export [#677]
+- Veranstaltungssuche beim automatischen Eintragen funktioniert nicht richtig [#685]
+- Courseware: TypewriterBlock hat falsches Icon [#708]
+- Courseware: Inhaltsverzeichnisblock enthält falschen Beschreibungstext [#709]
+- Nur noch veranstaltungsbezogene Sprechstunden/Termine in Veranstaltungsübersicht verlinken [#713]
+- Bezeichnug "Seite" in Courseware Verwaltung missverständlich [#721]
+- Courseware ContentBar Breadcrumb kürzt zu früh ein [#727]
+- Löschen von CW-Seiten mit Unterseiten dauert sehr lange [#736]
+- EmbedBlock Event Listener wird nach wechseln der Seite nicht abgeräumt [#738]
+- Courseware: Neue Blöcke können nicht hinzugefügt werden [#740]
+- Anmeldung zu Veranstaltungen mit Losverfahren und Teilnahmebedingung funktioniert nicht [#742]
+- "Abschnitt bearbeiten"-Dialog ist zu klein für den Inhalt, wenn mehr als ein Fach angelegt wird, Inhalt passt sich nicht an [#743]
+- Meine Veranstaltungen: Alle als gelesen markieren erfasst nicht Ankündigung und erzeugt seltsame Meldung [#746]
+- OER-Campus: Suche bleibt kommentarlos, wenn nichts gefunden wurde [#749]
+- OER-Campus: Material kann ohne Titel angelegt werden [#750]
+- Meine Veranstaltungen: Reihenfolge und freie Slots nutzen unterschiedliche Logik [#751]
+- Fragebögen zu früh sichtbar [#755]
+- Inhaltsverzeichnisblock schließt nicht bündig ab [#756]
+- Inhaltsverzeichnisblock zählt Seiten in Version 5.0 falsch [#757]
+- countChildren im Inhaltsverzeichnisblock wird nicht mehr verwendet [#759]
+- Hilfe Touren: Schritte können nicht gelöscht werden. [#760]
+- Error: Call to undefined method Courseware\Instance::canEdit() [#764]
+- Verwaltung von Veranstaltungen: falsche Icons [#777]
+- User->getHomepageElements - obsoleter code [#788]
+- Courseware: Anzeigefehler in der Sidebar [#790]
+- OER Campus: TypeError: results is null [#792]
+- OER Campus ermöglicht "feindliche Übernahme" der `oer_hosts` [#793]
+- Icons fehlen in Profil->Einstellungen->Benachrichtigung [#796]
+- Courseware: Call to a member function getDownloadURL() on null [#803]
+- Courseware: Inhaltsverzeichnis scrollt an die falsche Stelle [#804]
+- Courseware: Aufklappen des Akkordeon springt zum Seitenanfang [#808]
+- Courseware: Seitennavigation springt nicht zum Seitenanfang [#809]
+- Courseware: EmbedBlock ignoriert Proxy Einstellungen [#816]
+- Courseware: Seite bearbeiten - Farbauswahl nicht möglich [#817]
+- Courseware: a11y Änderungen sorgen für unerwartetes Scrolling [#825]
+- Download Block setzt kein userdata [#826]
+- Studiengruppen werden nur noch im aktuellen Semester angelegt [#828]
+- Courseware: loadTeacherStatus in eigener CW führt zu Fehler [#829]
+- Anlegen neuer Veranstaltungen führt bei englischer Spracheinstellung zu Fehler [#831]
+- Der Dialog beim Löschen einer Seite macht nicht deutlich, dass auch alle Unterseiten gelöscht werden [#833]
+- Administration von Foren kaputt [#843]
+- Globale Suche wirft InvalidArgumentException: Element could not be appended, element with id: 928d9ea089aa5442f8edbcb534758d93 [#844]
+- IFrame Block fügt der URL immer einen Parameter hinzu [#848]
+- Tippfehler in lib/modules/ConsultationModule.class.php [#850]
+- Doppelter Textstring in lib/modules/CoursewareModule.class.php [#851]
+- CoursewareCourseManager.vue: Textstring verweist auf Aktionen, die es nicht gibt, weiterer Textstring enthält Tippfehler [#854]
+- Courseware: Tutoren können keine Inhalte aus anderen Kursen kopieren [#856]
+- Kopieren von Courseware Inhalten prüft nicht Leseberechtigung der Quelle [#857]
+- CoursewareCourseManager.vue: Reiter „Verschieben“ ist nicht übersetzbar. [#863]
+- "Passwortlink zusenden" funktioniert für Admins und Root nicht [#866]
+
+05.04.2022 v 4.6.4
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.4&state=all
+- Löschen von Nachrichten im Posteingang vs. Gesendete-Nachrichten [#565]
+
+05.04.2022 v 4.5.6
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.5.6&state=all
+- Sperrzeiten sperren auch globale Raumadmins [#186]
+- Informationen zur Raumanfrage: HTML in Anzeige der Termine [#370]
+- In den persönlichen Bereich verschobene Dateien lassen sich nicht mehr löschen / verschieben [#433]
+- Aktionsmenü ist nicht korrekt für Screenreader ausgezeichnet [#441]
+- MVV: Beim Anlegen eines Modulteils werden die zugeordneten Sprachen nicht übernommen [#444]
+- Buttons kürzen Text auf schmalen Bildschirmen nicht [#463]
+- Anzeigefehler im Dialog "Nachricht schreiben" [#471]
+- Inkonsistente Anzeige bei Vorlesungsstart mitten in der Woche [#472]
+- Aktionsbereich für die Radiobox auf "Farbgruppierung Veranstaltungen" ist zu klein [#475]
+- AccessDeniedException in files für Öffentliche Veranstaltung [#476]
+- ckeditor: Upload per Drag&Drop lädt die gleiche Datei in mehrere Eingabefelder hoch [#487]
+- Studierendenansicht simulieren: Funktion für root nicht verfügbar [#502]
+- Raumanfrage auflösen produziert unsinnige Nachfrage [#511]
+- Inhalte von Unterordnern in versteckten Ordnern können nicht ausgelesen werden, selbst wenn man " Zugriff auf Dateien per Link erlauben" setzt. [#518]
+- Hilfelasche: Iconnamen werden vom Screenreader vorgelesen [#522]
+- Avatarmenü: ARIA-Rollen fehlen und ARIA-Rolle „expanded“ wird zweimal verwendet [#525]
+- Per Skiplink angesprungene Elemente verschwinden aus der Fokus-Reihenfolge [#527]
+- Austragen aus Hauptveranstaltung in der Mobilansicht möglich [#532]
+- Icons: alt-Attribute von img-Elementen sollten nicht den Iconnamen enthalten [#533]
+- Teilnehmendenseite: Checkbox ist nicht mit dem Namen der Person verknüpft [#540]
+- Avatar-Icon wird in Tabellen vorgelesen, obwohl der Name direkt daneben steht [#553]
+- Zusatzangaben werden beim Verlassen der Veranstaltung nicht gelöscht [#559]
+- Infotext bei verpflichtender Abfrage von Zusatzangaben [#563]
+- JQuery-UI Security-Update [#566]
+- Plugin-Typen werden beim Update nicht aktualisiert [#569]
+- Fehler beim Anklicken von Veranstaltungsterminen in der Monatsansicht im pers. Terminkalender [#578]
+- Unit-Tests schlagen unter PHP 7.4 fehl [#607]
+- data-secure kann keine Elemente von der Prüfung ausnehmen [#611]
+- make schlägt in Stud.IP 4.5 fehl [#617]
+- Rechschreibfehler in CronjobScheduler [#624]
+- Stud.IP 4.5: Syntax Error in HiddenFolder [#626]
+- Fehlerhafte Behandlung von Hashes aus der Location für Skiplinks [#627]
+- Termine: Falsche Zeichenkodierung [#637]
+- Falsche Variablenzuweisung im Template von "Meine Studiengruppen" [#638]
+- Rolle bleibt nach dem Löschen im Cache [#644]
+- accordion.js wirft Fehler wegen jquery Version (Coursewareplugin Gruppierungsblock) [#661]
+- Löschen eines Sprechstundentermins im Kalender löscht nur den Termin, nicht aber die zugehörige Buchung [#671]
+- Ungültiger Redirect [#672]
+- Ungültige Redirects [#674]
+- Probleme mit Pagination-Klasse [#683]
+- X-Location Header wird URL-codiert ausgeliefert [#684]
+- XSS-Probleme beim Feedback [#689]
+- Feedback: Typo "Es wurden noch Feedback-Elemente angelegt." [#690]
+- Falscher Name für Rechteverwaltung bei Raumeigenschaften [#694]
+- MVV: Nicht übersetzbare Strings [#698]
+- Wiki-Versionen können von Teilnehmende gelöscht werden. [#724]
+- Semesterbelegungsplan - Semesterfilter wird immer zurückgesetzt [#745]
+- Mobile Darstellung: Dialog nach Abmeldung nicht optimiert [#748]
+- View resources/_common/_resource_tr.php fragt Eigenschaft „booking_plan_is_public“ falsch ab [#761]
+- Use of undefined constant DEFAULT_COLOR_NEW [#763]
+- Blubber drag'n'drop führt zu unerwünschten Uploads [#799]
+- Mobilansicht: select2 in der Sidebar unbedienbar [#815]
+- seminar_user.comment von TINYTEXT zu VARCHAR(255) ändern [#830]
+- Datei- und Aktivitätsübersicht kaputt [#834]
+- Buttons als Sidebar-Aktionen gehen nicht über die gesamte Breite [#858]
+- Nutzer anlegen - Whitespace [#865]
+
 24.12.2021 v 4.6.3
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.3&state=all
 - [Security] tls1.0 in stream_socket_enable_crypto verwendet [#118]
