--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ André Noack         <noack@data-quest.de>
 Cornelia Roser      <roser@hawk-hhg.de>
 David Siegfried     <david.siegfried@uni-vechta.de>
 Martin Stratmann    <martin@herrstratmann.de>
+Moritz Strohm       <strohm@data-quest.de>
 Stefan Suchi        <suchi@data-quest.de>
 Peter Thienel       <thienel@data-quest.de>
 Jan-Hendrik Willms  <tleilax@gmail.com>
@@ -89,9 +90,6 @@ Jörg Röpke          <roepke@uni-trier.de>
 
 Tobias Thelen       <tobias.thelen@uos.de>
 Stud.IP help, event logging, wiki enhancements
-
-Hartje Kriete       <kriete@math.uni-goettingen.de>
-English translation
 
 Carola Kruse        <carola.kruse@tu-braunschweig.de>
 
