--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,79 @@
+31.05.2022 v 4.6.5
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.5&state=all
+- Belegungspläne: Datumsauswahl ohne Aktivierung durch Anklicken auf Haken [#187]
+- Dateiübersicht / Arbeitsplatz: "Persönlicher Dateibereich" ist die falsche Bezeichnung, out of memory Fehler bei vielen Dateien [#800]
+- Raumsuche - Räume zur Raumgruppe hinzufügen funktioniert nicht [#890]
+- Unknown action 'read' im JSUpdater bei neuen Nachrichten [#891]
+- Fehlender Hinweis bzgl. Raumbuchungen beim Löschen von VA-Terminen [#926]
+- Fehler beim Aufruf der Übersichtsseite, wenn man die Termine auch verwalten darf [#931]
+- Fehler beim Löschen von Terminvergabe-Slots [#932]
+- Tippfehler bei den Übersetzungen [#936]
+- Fehler bei den Sichtbarkeitseinstellungen der "erweiterten Einstellungen" [#938]
+- Error: Class 'ForumEntry' not found in ForumProvider.php:21 [#940]
+- PHP Warning:  call_user_func() expects parameter 1 to be a valid callback, first array member is not a valid class name or object [#955]
+- Teilnehmer/Gruppen: Multipersonsearch führt zu Speichermangel [#1000]
+- "Meine Studiengruppen" für Admins sichtbar [#1097]
+
+31.05.2022 v 4.5.7
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.5.7&state=all
+- resource_booking_intervals fehlt Index auf booking_id [#198]
+- Raumsuche: Filter hinzufügen funktioniert nicht [#225]
+- Raumsuche: Sitzplätze sollte eine sinnvolle Vorbelegung haben [#226]
+- Raumsuche: gewählter Wochentag verschwindet nach der Suche [#227]
+- Error: Class 'RESTAPI\Routes\Resource' not found [#238]
+- In den Rechtekonfigurationen für MVV fehlt an Modulen und Studiengangteilen der Eintrag für zugeordnete Personen [#271]
+- Raumberechtigungen: Admin einer Einrichtung kann unsichtbare Accounts nicht finden [#379]
+- Löschen eines Studienganges... I18N - Fehler [#555]
+- Auflösen von Raumanfragen: falsche Räume vorgewählt [#710]
+- Raumanfrage erstellen: Räume werden bei der Angabe von Sitzplätzen und einer boolean-Eigenschaft nicht gefunden [#725]
+- Anmeldung mit Passwort überschreibt bei falscher Eingabe das Passwort im Dialog [#741]
+- Data-Dialog ignoriert Pflichtfelder [#772]
+- Mit Tablesorter sortierbare Tabellenspalten werden mit englischer Beschreibung vorgelesen [#794]
+- Externe Seite: Warnungen mit PHP 7.2 [#827]
+- Anzeigefehler des Belegungsplans in der Mobilansicht [#869]
+- Button „Bearbeiten“ in Raumansicht ohne Funktion [#870]
+- Lageplan ohne Geokoordinaten [#871]
+- SORM-Konstruktor kann keinen unvollständigen PK setzen [#878]
+- Spalte `termine.topic_id` ist verwaist und sollte entfernt werden [#881]
+- Ankündigungen: Lesen der Kommentare wird nicht registriert [#903]
+- Kein Redirect nach Schreiben eines Kommentars zu einer Ankündigung [#907]
+- messages/write: Unzureichende Rechteprüfung für filter-Parameter [#908]
+- ILIAS-Schnittstelle: Fehler bei Wiederherstellen von LDAP-Accounts [#941]
+- Raumverwaltung: persönliche Nachrichten statt Systemnachrichten verschicken [#942]
+- Blubberbenachrichtigungen führen in manchen Fällen zu ungültigen Links [#943]
+- "Call to a member function getPropertyObject() on null" beim Anzeigen einer Ressource [#945]
+- SkipLinks::addLink() dekodiert die reingereichte URL [#951]
+- Eigene Implementierung von jQuery-Selector ":invalid" entfernen [#952]
+- Spezialbehandlung für Reformationstag 2017 sollte entfernt werden [#958]
+- Unknown column 'seminar_user.visible' in 'where clause' [#965]
+- ResourceProperty::__toString prüft bei user-Eigenschaften nicht nach, ob ein User-Objekt gefunden wurde [#977]
+- Öffentlich zugängliche Belegungspläne können für Personen ohne Raumberechtigungen nicht zugänglich sein [#978]
+- Veranstaltung anlegen: UnexpectedValueException: no data found [#981]
+- STUDIP.jsonapi.GET() kodiert URL-Parameter falsch [#984]
+- Admin > Überschneidungskontrolle > Gefundene Konflikte werden nicht angezeigt [#986]
+- Übersetzung von angepassten Titeln schlägt fehl [#990]
+- Fehlendes URL-Encoding der Parameter in resources/assets/javascripts/bootstrap/resources.js [#998]
+- MVV: Integrity constraint violation beim Vergleich von Modulbeschreibungen [#999]
+- Fehlerhaftes Hinzufügen von Skiplinks im Template "index_nobody.php" [#1006]
+- Fehlerhafte farbliche Auszeichnung bei öffentlichen Veranstaltungen [#1008]
+- Nach Speichern von Konfiguration dorthin springen [#1013]
+- Verwaltung von Systemkonfigurationen: Kategorie klappt nach dem Speichern zu [#1014]
+- Gradebook: Tutoren können keine Noten eintragen [#1018]
+- Über die URL angesprungene Elemente verschwinden hinter dem Header [#1019]
+- Raumsuche: Zeitbereich für Semester ist falsch vorbelegt [#1022]
+- Migration 1.113 löscht Einstellungen, die ihr nicht gehören [#1028]
+- Zusätzliche LTI-Parameter werden bei "=" abgeschnitten [#1040]
+- Anmeldung mit Passwort: Bearbeiten der Regel überschreibt das Passwort [#1045]
+- Log-Event RES_PERM_CHANGE hat kein Template [#1065]
+- Passwortänderung: Meldung „Das Passwort ist zu kurz“ bei zu langem Passwort [#1066]
+- Globale Suche nach Veranstaltungen zeigt keine Semester mehr an [#1069]
+- Falsche Verwendung von `semester_token` bei mehr als einer Sprache [#1071]
+- Route /institute/:id liefert den Namen als leeres Objekt zurück [#1076]
+- Fehlerhaftes HTML im Template [#1092]
+- Rendering von `ClipboardWidget` und abgeleiteten Klassen nicht korrekt [#1102]
+- Fatal Error auf der Profilseite [#1106]
+- Semester::current not found [#1111]
+
 06.04.2022 v 5.0
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0&state=all
 - .gitignore-Dateien fehlen [#2]
