--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,43 @@
+31.05.2022 v 5.0.1
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0.1&state=all
+- Skiplinks: Auswahl der Hauptnavigation springt auf die falsche Seitenhöhe [#104]
+- OER Campus: Dialog „Eigenes Lernmaterial hochladen“ lässt sich nicht per ESC-Taste schließen [#110]
+- Belegungsplan: "Individuelle Druckansicht" verliert die gewählte Woche [#199]
+- Anfragenliste: Verlinkung zur Veranstaltung fehlt [#214]
+- Interne Courseware-Links enthalten eine falsche URL, wenn sie in einem neuen Tab geöffnet werden [#279]
+- Blickfang-Block: Layout kaputt bei langen Texten [#729]
+- Ermittlung vom Standard Semester funktioniert nicht im Vorlesungsverzeichnis [#752]
+- Bearbeiten eines Blockes auf einer Seite mit vielen Blöcken springt an den Seitenanfang [#781]
+- Fehler als root beim Betreten der Courseware [#786]
+- OER Campus: Nicht-herunterladbare Inhalte können nicht gelöscht werden [#822]
+- Beim Courseware-Export und anschließenden Import gehen Seiten-Metadaten verloren [#846]
+- Fehlermeldung und Abbruchmöglichkeit bei Fehlern beim Courseware Import [#847]
+- Aktualisierung der Seitenstruktur nach dem Sortieren von Seiten über die Verwaltung [#883]
+- Courseware: Warnung bzgl. Abbruch des Imports, wenn man die Seite verläßt [#885]
+- Courseware: Import bzw. Kopieren aller Inhalte aus einem anderen Kurs nicht direkt möglich [#886]
+- Courseware: formatiertem Text fehlt die CSS-Klasse `formatted-content` [#888]
+- Courseware: Navigieren im Inhaltsverzeichnis nach Auswahl des Kopierziels [#892]
+- Rangliste: BIGINT UNSIGNED value is out of range [#894]
+- Courseware-Verwaltung: Verschieben einer Seite springt an den Seitenanfang [#897]
+- Courseware: CSS deaktivert focus outline [#898]
+- Courseware: "Elemente hinzufügen" klappt zu, wenn ich mit der Seite interagiere [#901]
+- Courseware: Lernkarte entfernen entfernt auch alle Eingabefelder [#904]
+- Courseware: Link-Block läuft beim Import auf einen Fehler [#905]
+- Courseware: Import legt Ordner im Dateibereich an, obwohl der Export keine Dateien enthält [#906]
+- `make test-functional` schlägt fehl [#916]
+- StandardSearch('Seminar_id') ist kaputt [#948]
+- Vorlesungsverzeichnis: Suche zeigt bei Gruppierung "Semester" keine Treffer an [#956]
+- Courseware: Veröffentlichen auf OER Campus Dialog schließt sich nicht [#960]
+- Checkboxen funktionieren nicht richtig in Profil->Einstellungen->Benachrichtigung [#962]
+- Tägliche Mail Benachrichtigungen funktionieren nicht [#964]
+- Forum: Strings in JS sind nicht mehr übersetzbar [#972]
+- Im Chrome überlaget die Footer-Bar den Inhalt [#983]
+- Reste der alten Übersetzungs-API entfernen [#992]
+- Nicht übersetzbare Texte in resources/assets/javascripts/bootstrap/mvv_difflog.js [#997]
+- Filtermöglichkeit im Dateibereich ist defekt [#1007]
+- LTI-Tools: Konfigurationen funktionieren nach Update auf 5.0 nicht mehr [#1042]
+- Speichern von Blöcken in persönlichen Lernmaterialien nicht möglich [#1044]
+
 31.05.2022 v 4.6.5
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.5&state=all
 - Belegungspläne: Datumsauswahl ohne Aktivierung durch Anklicken auf Haken [#187]
