--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,86 @@
+15.07.2022 v 4.6.6
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.6.6&state=all
+- Tabellenzellen in letzter Zeile einer umgebenden Tabelle bekommen immer einen css-border [#90]
+- Anzeigefehler im persönlichen Dateibereich [#317]
+- Dateibereich: "aus Bibliotheksverzeichnissen einbinden" ist viel zu promiment [#359]
+- Studiengangsinformationen liefert falsche Zahlen [#913]
+- Browser Safari zeigt bei Raumgruppenplänen Räume nicht an [#929]
+- Individuelle Raumgruppen löschen nicht per tastatur erreichbar [#1094]
+- RVV: Falsche Darstellung/Zählung der Vorlesungswochen [#1147]
+- Falsche Sortierung in der Veranstaltungsverwaltung bei den Grunddaten (für Admins) [#1175]
+- Fehler durch festgelegten Konstruktor in Interface `FileType` [#1280]
+- Individuelle Raumgruppen: Aktionsmenü in der Sidebar falsch positioniert [#1286]
+- Fehler beim Löschen von Sprechstundenterminen [#1300]
+- Öffentlich zugängliche Raumpläne  - Liste der Räume bietet keine Funktionen an [#1306]
+
+15.07.2022 v 4.5.8
+https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+4.5.8&state=all
+- Raumsuche: Trefferliste sollte direkt Funktionen bereitstellen [#228]
+- Raumeigenschaften vom Typ "einzeiliges Textfeld" werden nicht korrekt übernommen [#269]
+- Löschen von Einzelterminen führt zu kaputten Raumanfragen [#707]
+- "Anfrage auf ausgewählte Termine stellen" funktioniert nicht mehr [#711]
+- Personenliste anlegen ohne Platzverteilung wirft Fehler [#927]
+- PHP message: InvalidArgumentException: navigation item 'course/forum2/newest' not found [#944]
+- Unklares Verhalten bei `url_for` mit URL-Fragmenten [#985]
+- Anzeigen/Drucken des QR-Codes verhält sich komisch bzw. ist kaputt [#995]
+- Dialog/Seite zu Fragebögen verlinkt nicht auf die vorhandene Hilfe [#1011]
+- Raumsuche: hinzugefügte Filter funktionieren nicht [#1023]
+- Raumsuche: falsche Zuordnung der Labels zu den Eingabefeldern [#1024]
+- Ändern einer Raumbuchung führt zu Fehler "Unzureichende Berechtigungen" [#1072]
+- Globale Suche reagiert nicht korrekt auf eingefügte Strings [#1101]
+- Einladungen zu Studiengruppen lassen sich nicht akzeptieren [#1105]
+- Individuelle Raumgruppen: Neue Gruppe kann nicht erstellt werden [#1133]
+- Serialization of 'Closure' is not allowed [#1137]
+- node-sass ist deprecated und soll ersetzt werden [#1143]
+- Raumsuche Serialization of 'Closure' is not allowed [#1146]
+- MVV-Modulbeschreibungen - Dialoge sind uneinheitlich groß [#1163]
+- Suche im Vorlesungsverzeichnis - ergibt Fehlermeldung [#1176]
+- Ungültiger Redirect beim Speichern von Konfigurationen [#1182]
+- Eigene Bezeichnungen für Berechtigungsebenen in Veranstaltungen werden nicht ausgewertet [#1185]
+- Verwendung von `action_link()` erzeugt kaputte URLs [#1188]
+- Anmeldung zu Veranstaltungen nicht mehr möglich (bis einschließlich Stud.IP 5.0) [#1191]
+- Export der Teilnehmerliste: Call to a member function getClass() on null [#1192]
+- Tests für RRv2 schlagen fehl [#1193]
+- Fehlerhaftes SQL in ForumEntry::checkRootEntry() [#1194]
+- Fehlerhafter Datentyp in Test UserScheduleShowTest.php:testGetUserSchedule [#1195]
+- Falscher MIME-Type für Word-Dokumente beim Download [#1205]
+- Erkennung von Pflichtfeldern für Dialoge zu strikt [#1210]
+- Warnings im LESS-Compiler [#1211]
+- Räume bearbeiten - unnötiger Aufruf von array_reverse [#1212]
+- Es können Raumanfragen auf ausgefallene Termine gestellt werden [#1214]
+- Buchende Person kann nicht mehr programmatisch gesetzt werden. [#1220]
+- Undefinierte Variable in ResourceBooking::validate() [#1221]
+- Spalte `ex_termine.topic_id` ist verwaist und sollte entfernt werden [#1224]
+- Text verschwindet aus Navigation beim Hover über kein Element [#1225]
+- Fehler im Code der RESTAPI [#1227]
+- Fehler im Code mancher MVV-Models [#1230]
+- Fehler im Code des Dateibereichs [#1231]
+- Fehler in den rrv2-Models [#1232]
+- Class XYZ referenced with incorrect case [#1233]
+- Funktion in StudipLog ist fälschlicherweise nicht  static [#1234]
+- Raumbelegungsplan Überschrift springt beim Laden [#1236]
+- Forum: Cannot use [] for reading [#1238]
+- Fehlerhafte Aufrufe von Methoden in Evaluationsklassen [#1239]
+- Diverse Fehler in Klasse ForumBulkMail [#1240]
+- API der Evaluationen versendet bei Fehlern Mails an einen externen Account [#1242]
+- Fehler in StudipLock::get() [#1247]
+- Aufruf unbekannter Klasse "DB_ELearning" [#1248]
+- Aufrufe unbekannter Klasse `MvvDokument` in `lib/classes/MVV.class.php` [#1249]
+- Fehler: Instantiated class Studip\Interactable is abstract. [#1250]
+- Fehler im ContentModule: Call to an undefined method ContentModule::readData(). [#1252]
+- Raumverwaltung: Übersicht: Namen von Standorten und Gebäuden haben ein falsches Zeiger-Icon [#1254]
+- Nach dem Anlegen einer Buchung im Semester-Belegungsplan muss der Raum neu gewählt werden [#1255]
+- Hilfe-Seite für Feedback  Modul verlinken [#1258]
+- Fehler vom Typ `Class referenced with incorrect case` [#1263]
+- StudipIcon verwendet die Rolle "lightblue" [#1268]
+- Belegungspläne werden nicht mehr angezeigt [#1281]
+- Funktionen des WYSIWYG-Editors mit Eingabedialog ändern Scrollposition des Hauptfensters [#1293]
+- RESTApi-Route /file/:file_ref_id/copy/:destination_folder_id defekt [#1302]
+- Fehler in Routen der RESTAPI [#1303]
+- Buttons haben falsche Fokus-Hervorhebung [#1304]
+- Unverständliche Fehlermeldung: Fehler beim Laden des Hauptordners [#1305]
+- Typo in TourController::delete_tour() [#1332]
+
 31.05.2022 v 5.0.1
 https://gitlab.studip.de/studip/studip/-/issues?milestone_title=Stud.IP+5.0.1&state=all
 - Skiplinks: Auswahl der Hauptnavigation springt auf die falsche Seitenhöhe [#104]
